# face-detector-app

./: .gitignore  api.py  logger.py  model.py  model_client.py  pyproject.toml  requirements.txt  serve_config.yaml  serve_config_serve.yaml
